--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 # livebook-devcontainer
 
 Nothing interesting here yet. Try again later.
+
+# Usage
+
+[GitHub CodespacesでElixir Livebookを爆速セットアップ！](https://qiita.com/torifukukaiou/items/bc4cdcd7025bce09bffe)
+
+only Japanese
